src/test/ui/rfc1445/match-requires-both-partialeq-and-eq.stderr
error: to use a constant of type `Foo` in a pattern, `Foo` must be annotated with `#[derive(PartialEq, Eq)]`
  --> $DIR/match-requires-both-partialeq-and-eq.rs:17:9
   |
LL |         FOO => { }
   |         ^^^

error: to use a constant of type `Foo` in a pattern, `Foo` must be annotated with `#[derive(PartialEq, Eq)]`
  --> $DIR/match-requires-both-partialeq-and-eq.rs:17:9
   |
LL |         FOO => { }
   |         ^^^

error: aborting due to 2 previous errors

